samples/_failures_safe/1761189028_795060_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86864ea8.c: In function ‘main’:
./samples/SAFE/__tmp_86864ea8.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
